[project]
name = "jr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.59",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.3",
    "openai>=1.77.0",
    "st-theme>=1.2.3",
    "streamlit>=1.45.0",
]
